--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,12 +5,12 @@ charset-normalizer==3.3.2
 colorama==0.4.6
 cryptography==41.0.5
 defusedxml==0.8.0rc2
-Django==4.2.7
-django-filter==23.3
+Django==3.2
+django-filter==2.4.0
 django-templated-mail==1.1.1
-djangorestframework==3.14.0
+djangorestframework==3.12.4
 djangorestframework-simplejwt==5.3.0
-djoser==2.2.0
+djoser==2.1.0
 drf-base64==2.0
 exceptiongroup==1.1.3
 flake8==6.1.0
@@ -20,10 +20,10 @@ isort==5.12.0
 mccabe==0.7.0
 oauthlib==3.2.2
 packaging==23.2
-Pillow==10.1.0
+pillow==8.3.2
 pluggy==1.3.0
 progress==1.6
-psycopg2-binary==2.9.9
+psycopg2-binary==2.8.6
 pycodestyle==2.11.1
 pycparser==2.21
 pyflakes==3.1.0
