--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -1,6 +1,7 @@
 server {
   listen 80;
-  server_name yp62.sytes.net 158.160.81.200;
+  index index.html;
+  server_tokens off;
   client_max_body_size 20M;
 
   location /api/docs/ {
@@ -35,8 +36,9 @@ server {
       proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header        X-Forwarded-Proto $scheme;
     }
+
     error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
+  location = /50x.html {
       root   /var/html/frontend/;
     }
 }
